--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,9 @@
+# external properties
 spring.config.import=custom.properties
+
+# for view
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
+
+#  for dynamic sql
+logging.level.com.example.demo.mapper=debug
